--- a/NotFacebook-main/HTML/Index.html
+++ b/NotFacebook-main/HTML/Index.html
@@ -12,24 +12,24 @@
     <div class="main">
        <div class="login">
         <h1>Login</h1>
+        <h4>Enter your details below</h4>
        </div> 
-       <div>
-        <img src="/Users/damacm1137/Downloads/NotFacebook-main/RESOURCES/image.png" alt="img">
-
+       <form>
         <div class="username">Email/Username</div>
         <input type="text" placeholder="Enter your email/username">
        
         <div class="password">Password</div>
         <input type="text" placeholder="Enter your password">
-      <div class="btn-button">
-        <button>Forgot Password</button>
+      <div class="forgot password">
+        <a href="#">Forgot Password?</a>
     </div>
-    <div class="btn-button">
+    <div class="btn">
         <button>Sign In</button>
     </div>
-    <div class="Text">
-        <p>Don't have an account,register.</p>
+    <div class="register-link">
+        <p1>Don't have an account?</p1> <a href="url">Register.</a>
     </div>
+</form>
     </div>
 </body>
 </html>
