--- a/NotFacebook-main/HTML/Index.html
+++ b/NotFacebook-main/HTML/Index.html
@@ -20,9 +20,9 @@
        
         <div class="password">Password</div>
         <input type="text" placeholder="Enter your password">
-      <div class="forgot password">
+      <div class="forgot-password">
         <a href="#">Forgot Password?</a>
-    </div>
+        </div>
     <div class="btn">
         <button>Sign In</button>
     </div>
