--- a/NotFacebook-main/HTML/NotFacebook.html
+++ b/NotFacebook-main/HTML/NotFacebook.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
                 <li>
-                    <a href="#">
+                    <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/messages.html">
                         <i class="fas fa-envelope"></i> Messages 
                         <span class="notification-badge">6</span>
                     </a>
@@ -149,7 +149,7 @@
 </div>
 
 </div>
-       
+
 
 </body>
 </html>
