--- a/NotFacebook-main/HTML/Index.html
+++ b/NotFacebook-main/HTML/Index.html
@@ -9,27 +9,24 @@
 </head>
 <body>
     
-    <div class="main">
-       <div class="login">
+    <div class="login-container">
         <h1>Login</h1>
         <h4>Enter your details below</h4>
-       </div> 
-       <form>
-        <div class="username">Email/Username</div>
-        <input type="text" placeholder="Enter your email/username">
-       
-        <div class="password">Password</div>
-        <input type="text" placeholder="Enter your password">
-      <div class="forgot-password">
-        <a href="#">Forgot Password?</a>
+        <form>
+            <div class="form-group">
+            <label for="email">Email/Username</label>
+            <input type="text" placeholder="Enter your email or username">
+            </div>
+            <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" placeholder="Enter your password">
+            <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/forgotpassword.html">Forgot password?</a>
+            </div>
+            <button type="submit" class="btn">Sign In</button>
+        </form>
+        <div class="register-link">
+            <p>Don't have an account? <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/Register.html">Register</a></p>
         </div>
-    <div class="btn">
-        <button>Sign In</button>
-    </div>
-    <div class="register-link">
-        <p1>Don't have an account?</p1> <a href="url">Register.</a>
-    </div>
-</form>
-    </div>
+        </div>
 </body>
 </html>
