--- a/NotFacebook-main/HTML/Index.html
+++ b/NotFacebook-main/HTML/Index.html
@@ -13,16 +13,20 @@
         <h1>Login</h1>
         <h4>Enter your details below</h4>
         <form>
-            <div class="form-group">
+            <div class="form">
             <label for="email">Email/Username</label>
             <input type="text" placeholder="Enter your email or username">
             </div>
-            <div class="form-group">
+            <div class="form">
             <label for="password">Password</label>
             <input type="password" placeholder="Enter your password">
             <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/forgotpassword.html">Forgot password?</a>
             </div>
-            <button type="submit" class="btn">Sign In</button>
+            <div>
+            <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/NotFacebook.html">
+            <button type="submit" class="btn" >Sign In</button>
+            </a>
+            </div>
         </form>
         <div class="register-link">
             <p>Don't have an account? <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/Register.html">Register</a></p>
