--- a/NotFacebook-main/HTML/Register.html
+++ b/NotFacebook-main/HTML/Register.html
@@ -14,17 +14,17 @@
         <h4>Register with your details below!</h4>
 
         <form>
-            <div class="form-group">
+            <div class="form">
             <label for="username">Username</label>
             <input type="text" placeholder="Enter your username">
 
                 </div>
-            <div class="form-group">
+            <div class="form">
             <label for="email">Email</label>
             <input type="email" placeholder="Enter your email">
 
                 </div>
-            <div class="form-group">
+            <div class="form">
             <label for="phone">Phone Number</label>
             <input type="text" placeholder="Enter your phone number">
 
