--- a/NotFacebook-main/HTML/Index.html
+++ b/NotFacebook-main/HTML/Index.html
@@ -23,9 +23,9 @@
             <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/forgotpassword.html">Forgot password?</a>
             </div>
             <div>
-            <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/NotFacebook.html">
-            <button type="submit" class="btn" >Sign In</button>
-            </a>
+            
+            <button type="submit" class="btn" ><a href="http://127.0.0.1:5500/NotFacebook-main/HTML/NotFacebook.html">Sign In</a></button>
+            
             </div>
         </form>
         <div class="register-link">
