--- a/NotFacebook-main/HTML/Register.html
+++ b/NotFacebook-main/HTML/Register.html
@@ -15,20 +15,27 @@
 
         <form>
             <div class="form">
-            <label for="username">Username</label>
-            <input type="text" placeholder="Enter your username">
+                <label for="username">Username</label>
+                <input type="text" placeholder="Enter your username">
 
-                </div>
+            </div>
             <div class="form">
-            <label for="email">Email</label>
-            <input type="email" placeholder="Enter your email">
+                <label for="email">Email</label>
+                <input type="email" placeholder="Enter your email">
 
-                </div>
+            </div>
             <div class="form">
-            <label for="phone">Phone Number</label>
-            <input type="text" placeholder="Enter your phone number">
-
-                </div>
+                <label for="phone">Phone Number</label>
+                <input type="text" placeholder="Enter your phone number">
+            </div>
+            <div class="form">
+                <label for="password">Password</label>
+                <input type="text" placeholder="Enter your password">
+            </div>
+            <div class="form">
+                <label for="password">Re-enter Password</label>
+                <input type="text" placeholder="Re-enter your password">
+            </div>
             <button type="submit" class="btn">Register</button>
 
         </form>
