--- a/NotFacebook-main/HTML/Register.html
+++ b/NotFacebook-main/HTML/Register.html
@@ -36,12 +36,14 @@
                 <label for="password">Re-enter Password</label>
                 <input type="text" placeholder="Re-enter your password">
             </div>
-            <button type="submit" class="btn">Register</button>
+            <button id="registerBtn">Register</button>
 
         </form>
         <div class="login-link">
             <p>Already have an account? <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/Index.html">Log In</a></p>
             </div>
 </div>
+
+<script src="../JS/Register.js"></script>
 </body>
 </html>
