--- a/NotFacebook-main/HTML/Index.html
+++ b/NotFacebook-main/HTML/Index.html
@@ -10,7 +10,11 @@
 
 <body>
 
-    <img src="https://i.pinimg.com/736x/7a/c1/65/7ac1653cf596fadbf370ae90ac23aeff.jpg" alt="Splash Image" loading="lazy">
+    <div class="container">
+        <div class="splash">
+        <span class="logo">NF</span>
+        </div>
+    </div>
 
     <script src="../JS/Splash.js">
     
