--- a/NotFacebook-main/HTML/Index.html
+++ b/NotFacebook-main/HTML/Index.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    <script src="../JS/Splash.js">
+    <script src="../JS/Splash.js" defer>
     
     </script>
 </body>
