--- a/NotFacebook-main/HTML/Register.html
+++ b/NotFacebook-main/HTML/Register.html
@@ -40,10 +40,15 @@
 
         </form>
         <div class="login-link">
-            <p>Already have an account? <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/Index.html">Log In</a></p>
-            </div>
+            <p>Already have an account? 
+                <a href="http://127.0.0.1:5500/NotFacebook-main/HTML/Index.html" onclick="skipSplash()">Log In</a>
+            </p>
+        </div>
+        
 </div>
 
-<script src="../JS/Register.js"></script>
+<script src="../JS/Register.js" defer></script>
+<script src="../JS/Login.js" defer></script>
+<script src="../JS/Validation.js"></script>
 </body>
 </html>
